# AI_workspace

./: README.md
3mf-to-step/: CMakeLists.txt  Dockerfile  LICENSE  README.md  test.sh
3mf-to-step/scripts/: build.sh
3mf-to-step/src/: converter.cpp  converter.h  main.cpp  reader_3mf.cpp  reader_3mf.h  writer_step.cpp  writer_step.h
3mf-to-step/test/: simple.3mf.xml  test.3mf  test_parser  test_parser.cpp  test_parser2
cnc-utils/: package.json  pnpm-lock.yaml
cnc-utils/.spark/: meta.json  progress.txt
cnc-utils/client/src/: app.tsx  index.css
cnc-utils/shared/: api.interface.ts  types.ts
gcode-toolpath-simulator/: package-lock.json  package.json  pnpm-lock.yaml
gcode-toolpath-simulator/.spark/: meta.json  progress.txt
gcode-toolpath-simulator/client/src/: app.tsx  index.css
gcode-toolpath-simulator/gcode-toolpath-simulator/: .gitignore  GITHUB_PUSH_GUIDE.md
grbl-cnc-controller/: .gitignore  LICENSE  README.md  README_DEPLOY.md  README_EN.md  package-lock.json  package.json
grbl-cnc-controller/.spark/: meta.json  progress.txt
grbl-cnc-controller/arduino/: README.md  WIRING.md
grbl-cnc-controller/arduino/grbl-controller/: Config.h  grbl-controller.ino
grbl-cnc-controller/docs/: arduino-guide.md  esp32s3-guide.md  gcode-reference.md  getting-started.md  hardware-wiring.md  wifi-control.md
grbl-cnc-controller/esp32s3/: README.md  WIRING.md
step-to-gcode/: package.json
step-to-gcode/.spark/: meta.json  progress.txt
step-to-gcode/shared/: api.interface.ts  types.ts
step-to-gcode/test_data/: sphere.stl  test_cube.step  test_cylinder.step
(+66 files in other folders)
